add: final style to header section

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <!-- region header -->
     <header>
         <div class="logo">
-            logo
+            <img src="./assets/img/logo.svg" alt="">
         </div>
 
         <div>
-            <a href="">link</a>
-            <a href="">link</a>
-            <a href="">link</a>
-            <a href="">link</a>
+            <a href="">Scarica</a>
+            <a href="">Perchè Discord</a>
+            <a href="">Nitro</a>
+            <a href="">Sicurezza</a>
+            <a href="">Assistenza</a>
         </div>
 
         <div class="login">
-            login
+            <button>Accedi</button>
         </div>
     </header>
 
