--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="login">
-            <button>Accedi</button>
+            <button id="login">Accedi</button>
         </div>
     </header>
 
@@ -34,7 +34,16 @@
         <div class="flex-container">
             <!-- first section -->
             <section class="sect1">
-                <div></div>
+                <div>
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    
+                    <div class="buttons">
+                        <button id="mac">&downarrow; Scarica per Mac</button>
+                        <button id="browser">Apri Discord nel tuo browser</button>
+                    </div>
+
+                </div>
             </section>
 
             <!-- middle sections -->
