add: final style to second section of main, fix spacing

--- a/index.html
+++ b/index.html
@@ -35,21 +35,31 @@
             <!-- first section -->
             <section class="sect1">
                 <div>
-                    <h1>Il tuo posto per parlare</h1>
-                    <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                    <h1>
+                        Il tuo posto per parlare
+                    </h1>
+                    <p>
+                        Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                    </p>
                     
                     <div class="buttons">
                         <button id="mac">&downarrow; Scarica per Mac</button>
                         <button id="browser">Apri Discord nel tuo browser</button>
                     </div>
-
                 </div>
             </section>
 
             <!-- middle sections -->
             <section class="sect2">
-                <div></div>
-                <div></div>
+                <div class="background1"></div>
+                <div>
+                    <h1>
+                        Un luogo a invito con tutto lo spazio necessario per parlare
+                    </h1>
+                    <p>
+                        I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
+                </div>
             </section>
 
             <section class="sect3">
