add: final style to third main section

--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
             </section>
 
             <section class="sect3">
-                <div></div>
-                <div></div>
+                <div>
+                    <h1>
+                        Dove trovarsi è facile
+                    </h1>
+                    <p>
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo serve possono vedere che sei lì e unirsi istantaneamente  senza dover chiamare.
+                    </p>
+                </div>
+                <div class="background2"></div>
             </section>
 
             <section class="sect4">
