add: final style to fourth main section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
             </section>
 
             <section class="sect4">
-                <div></div>
-                <div></div>
+                <div class="background3"></div>
+                <div>
+                    <h1>
+                        Da pochi a un fandom
+                    </h1>
+                    <p>
+                        Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                    </p>
+                </div>
             </section>
 
             <!-- final section -->
