--- a/index.html
+++ b/index.html
@@ -88,7 +88,23 @@
 
             <!-- final section -->
             <section class="sect5">
-                <div></div>
+                <div>
+                    <h1>
+                        Tecnologia affidabile per tenersi in contatto
+                    </h1>
+                    <p>
+                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                    </p>
+                </div>
+                <div>
+                    <img src="./assets/img/item4-big.svg" alt="">
+                </div>
+                <div class="buttons">
+                    <p>
+                        Pronto a iniziare la tua avventura?
+                    </p>
+                    <button>&downarrow; Scarica per Mac</button>
+                </div>
             </section>
         </div>
     </main>
