--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Discord</title>
 </head>
 
-<body class="debug">
+<body>
 
     <!-- region header -->
     <header>
@@ -113,18 +113,64 @@
     <footer>
         <!-- section 1 -->
         <section class="foot1">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <h1>
+                    Il tuo posto per parlare
+                </h1>
+                <p>
+                    <img src="./assets/img/ita.png" alt="">
+                    <span>Italiano &#8964;</span>
+                </p>
+            </div>
+            <div>
+                <h4>Prodotto</h4>
+                <p>Scarica</p>
+                <p>Perchè Discord</p>
+                <p>Nitro</p>
+                <p>Sicurezza</p>
+                <p>Assistenza</p>
+            </div>
+            <div>
+                <h4>Compagnia</h4>
+                <p>Chi siamo</p>
+                <p>Lavora con noi</p>
+                <p>Marchio</p>
+                <p>Redazione</p>
+                <p>Negozio</p>
+            </div>
+            <div>
+                <h4>Risorse</h4>
+                <p>Scarica</p>
+                <p>Perchè Discord</p>
+                <p>Nitro</p>
+                <p>Sicurezza</p>
+                <p>Assistenza</p>
+                <p>Scarica</p>
+                <p>Perchè Discord</p>
+                <p>Nitro</p>
+                <p>Sicurezza</p>
+                <p>Assistenza</p>
+                <p>Assistenza</p>
+            </div>
+            <div>
+                <h4>Norme</h4>
+                <p>Scarica</p>
+                <p>Perchè Discord</p>
+                <p>Nitro</p>
+                <p>Sicurezza</p>
+                <p>Assistenza</p>
+            </div>
         </section>
+
+        <hr>
 
         <!-- section 2 -->
         <section class="foot2">
             <div>
-                <span>Logo</span>
-                <button>Bottone</button>
+                <span class="logo">
+                    <img src="./assets/img/logo.svg" alt="">
+                </span>
+                <button>Registrati</button>
             </div>
         </section>
     </footer>
