fix: border and spacing

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <img src="./assets/img/item4-big.svg" alt="">
                 </div>
                 <div class="buttons">
-                    <p>
+                    <p class="star">
                         Pronto a iniziare la tua avventura?
                     </p>
                     <button>&downarrow; Scarica per Mac</button>
@@ -117,9 +117,12 @@
                 <h1>
                     Il tuo posto per parlare
                 </h1>
-                <p>
+                <p class="flex">
                     <img src="./assets/img/ita.png" alt="">
-                    <span>Italiano &#8964;</span>
+                    <span>
+                        Italiano
+                        <span id="arrow">&#8964;</span>
+                    </span>
                 </p>
             </div>
             <div>
@@ -161,8 +164,6 @@
                 <p>Assistenza</p>
             </div>
         </section>
-
-        <hr>
 
         <!-- section 2 -->
         <section class="foot2">
