--- a/index.html
+++ b/index.html
@@ -121,8 +121,14 @@
                     <img src="./assets/img/ita.png" alt="">
                     <span>
                         Italiano
-                        <span id="arrow">&#8964;</span>
                     </span>
+                    <span id="arrow">&#8964;</span>
+                    <div class="social">
+                        <img src="./assets/img/icons8-twitter.svg" alt="">
+                        <img src="./assets/img/icons8-instagram.svg" alt="">
+                        <img src="./assets/img/icons8-facebook-nuovo.svg" alt="">
+                        <img src="./assets/img/icons8-youtube.svg" alt="">
+                    </div>
                 </p>
             </div>
             <div>
