--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                         Il tuo posto per parlare
                     </h1>
                     <p>
-                        Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                        Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                        semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende
+                        più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                     </p>
-                    
+
                     <div class="buttons">
                         <button id="mac">&downarrow; Scarica per Mac</button>
                         <button id="browser">Apri Discord nel tuo browser</button>
@@ -57,10 +59,20 @@
                         Un luogo a invito con tutto lo spazio necessario per parlare
                     </h1>
                     <p>
-                        I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                        I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.
                     </p>
                 </div>
             </section>
+
+            <div class="svg">
+                <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100"
+                preserveAspectRatio="none">
+                <path class="wavePath-haxJK1 animationPaused-2hZ4IO"
+                    d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+                    fill="#f6f6f6"></path>
+                </svg>
+            </div>
 
             <section class="sect3">
                 <div>
@@ -68,7 +80,8 @@
                         Dove trovarsi è facile
                     </h1>
                     <p>
-                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo serve possono vedere che sei lì e unirsi istantaneamente  senza dover chiamare.
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo serve possono vedere che
+                        sei lì e unirsi istantaneamente senza dover chiamare.
                     </p>
                 </div>
                 <div class="background2"></div>
@@ -81,19 +94,32 @@
                         Da pochi a un fandom
                     </h1>
                     <p>
-                        Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
+                        Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.
                     </p>
                 </div>
             </section>
 
             <!-- final section -->
+
+            <div class="svg">
+                <svg class="wave-1hkxOo" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 100"
+                preserveAspectRatio="none">
+                <path class="wavePath-haxJK1 animationPaused-2hZ4IO"
+                    d="M826.337463,25.5396311 C670.970254,58.655965 603.696181,68.7870267 447.802481,35.1443383 C293.342778,1.81111414 137.33377,1.81111414 0,1.81111414 L0,150 L1920,150 L1920,1.81111414 C1739.53523,-16.6853983 1679.86404,73.1607868 1389.7826,37.4859505 C1099.70117,1.81111414 981.704672,-7.57670281 826.337463,25.5396311 Z"
+                    fill="#f6f6f6"></path>
+                </svg>
+            </div>
+
             <section class="sect5">
                 <div>
                     <h1>
                         Tecnologia affidabile per tenersi in contatto
                     </h1>
                     <p>
-                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
+                        ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con
+                        la condivisione schermo.
                     </p>
                 </div>
                 <div>
@@ -108,7 +134,7 @@
             </section>
         </div>
     </main>
-    
+
     <!-- region footer -->
     <footer>
         <!-- section 1 -->
@@ -123,12 +149,12 @@
                         Italiano
                     </span>
                     <span id="arrow">&#8964;</span>
-                    <div class="social">
-                        <img src="./assets/img/icons8-twitter.svg" alt="">
-                        <img src="./assets/img/icons8-instagram.svg" alt="">
-                        <img src="./assets/img/icons8-facebook-nuovo.svg" alt="">
-                        <img src="./assets/img/icons8-youtube.svg" alt="">
-                    </div>
+                <div class="social">
+                    <img src="./assets/img/icons8-twitter.svg" alt="">
+                    <img src="./assets/img/icons8-instagram.svg" alt="">
+                    <img src="./assets/img/icons8-facebook-nuovo.svg" alt="">
+                    <img src="./assets/img/icons8-youtube.svg" alt="">
+                </div>
                 </p>
             </div>
             <div>
